test/2/parse/num-literal-double-dot-leading.err
parse error: test/2/parse/num-literal-double-dot-leading.ploy:1:1-3: repeated '.' in number literal.
  .0.0
  ~~~
